<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Camera"
        android:icon="@drawable/camera"
        android:title="@string/camara"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/Search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/Help"
        android:icon="@drawable/help"
        android:title="@string/ayuda"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/Cuenta"
        android:title="@string/cuenta"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/datos"
                android:title="@string/datos_personales"
                app:showAsAction="never"/>
            <item
                android:id="@+id/documentos"
                android:title="@string/documentos_de_viajes"
                app:showAsAction="never"/>
            <item
                android:id="@+id/compañeros"
                android:title="@string/compa_eros_de_viaje"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/viajes"
        android:title="@string/viajes"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/embarque"
        android:title="@string/tarjeta_de_embarque"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/InfoVuelos"
        android:title="@string/informaci_n_de_vuelos"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/InfoActual"
        android:title="@string/informaci_n_actualizada"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/vales"
        android:title="@string/vales_de_regalo"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/revista"
        android:title="@string/revista_de_vuelo"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/terminos"
        android:title="@string/t_rminos_y_condiciones"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/centro"
        android:title="@string/centro_de_ayuda"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Contactar"
        android:title="@string/contactar_con_aerolinea"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/privacidad"
        android:title="@string/pol_tica_de_privacidad"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/confPriv"
        android:title="@string/configuraci_n_de_privacidad"
        app:showAsAction="never"></item>
</menu>